Failed attempt to fix body height on overflow.

--- a/style.css
+++ b/style.css
@@ -54,10 +54,10 @@ table {
 }
 
 body{
-    height: 100vh;
+    min-height: 100vh;
     display: grid;
     grid-template-columns: 1fr 5fr;
-    grid-template-rows: 1fr 4fr;
+    grid-template-rows: 1fr;
     grid-template-areas: 'sidebar header'
                          'sidebar dashboard';
 }
@@ -81,6 +81,7 @@ body{
 
 .dashboard-container{
     grid-area: dashboard;
+    padding-bottom: 1vh;
 }
 
 /* ||| Sidebar layout */
@@ -103,7 +104,8 @@ body{
     padding: 3vh;
     display: grid;
     grid-template-columns: 1fr;
-    grid-template-rows: repeat(20, 5%);
+    grid-template-rows: repeat(1, 5%);
+    grid-auto-rows: 5vh;
 }
 
 .navbar{
@@ -213,6 +215,7 @@ body{
     grid-area: 1 / 1 / 2 / 2;
     display: grid;
     grid-template-rows: 5vh;
+    grid-auto-rows: 1fr;
     grid-template-columns: repeat(auto-fit, minmax(360px, 1fr));
     gap: 1vh;
 }
@@ -274,10 +277,10 @@ body{
 }
 
 .content.trending-container{
-    padding: 3vh;
+    padding: 2vh;
     display: flex;
     flex-direction: column;
-    justify-content: flex-start;
+    justify-content: space-evenly;
     align-items: flex-start;
     gap: 1vh;
 }
